Bug 2024216 - Emoji comment reaction tooltips not visible on old closed bugs when adding reactions is disabled

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -1298,6 +1298,11 @@ a.comment-tag-url {
   color: var(--secondary-button-foreground-color) !important;
 }
 
+.comment-reactions .sums button:disabled {
+  pointer-events: auto;
+  cursor: default;
+}
+
 .comment-reactions button[aria-pressed="true"] {
   background-color: var(--selected-text-background-color) !important;
 }
